<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainClaimVote"
    android:background="#325B56"
    android:orientation="vertical"
    android:weightSum="14">

    //first linear layout
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="2"
        android:background="#003A3D"
        android:weightSum="4">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@drawable/tol_logo" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:fontFamily="@font/prosto_one"
            android:text="@string/strMainClaim"
            android:textColor="#FEC8C6"
            android:textSize="40sp" />
    </LinearLayout>

    //second linear layout
    <LinearLayout
        android:layout_height="0dp"
        android:layout_width="match_parent"
        android:layout_weight="12"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnTrue"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/custom_button"
                android:text="@string/strTrue"
                android:textAllCaps="false"
                android:textColor="#FEC8C6"
                android:textSize="20sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toTopOf="@+id/btnFalse"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/btnFalse"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:layout_marginBottom="32dp"
                android:background="@drawable/custom_button"
                android:text="@string/strFalse"
                android:textAllCaps="false"
                android:textColor="#FEC8C6"
                android:textSize="20sp"
                app:backgroundTint="@null"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tvMainClaim"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/strMCthis"
                android:textColor="#FEC8C6"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTrueOrFalse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/strMCTrueOrFalse"
                app:layout_constraintBottom_toTopOf="@+id/btnTrue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="#FEC8C6"
                android:textSize="20sp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>


</LinearLayout>

